export type Activity = {
  id: string;
  icon: string;
  name: string;
  description: string;
  type: string;
  instructor: { name: string; code: string };
};
