export type Topic = {
  id: string;
  name: string;
  totalItems: number;
  idActivity: string;
  idTopicActivity: string;
};
