export type Training = {
  id: string;
  title: string;
  icon: string;
  totalActivities: number;
};
