@startuml Trainmind Relationship

skin rose


entity "Trainings" as e01 {
  *id: string
  --
  title: string
  icon: string
  totalActivities: number
}

entity "Activities" as e02 {
  *id: string
  --
  icon: string
  name: string
  description: string
  type: string
  instructor: { name: string code: string }
  --
  idTrainig:string <<FK>>
}

entity "Topics" as e03 {
  *id: string
  --
  name: string
  totalItems: number
  --
  idActivity: string <<FK>>
  idTopicActivity:string <<FK>>
}

entity "Questionnaires" as e04 {
  *id: string
  --
  ...
}

entity "Interviews" as e05 {
  *id: string
  --
  ...
}

e01 ||..|{ e02
e02 ||..|{ e03
e03 ||..|| e04
e03 ||..|| e05

@enduml